# sigmod18-contest

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh  run_tests_release.sh
src/: Algebra.cpp  Algebra.hpp  Analysis.cpp  Analysis.hpp  CMakeLists.txt  Catalog.cpp  Catalog.hpp  HashTable.hpp  Index.hpp  QueryDescription.cpp  QueryDescription.hpp  QueryExecutor.cpp  QueryExecutor.hpp  QueryPlanning.cpp  QueryPlanning.hpp  Relation.cpp  Relation.hpp  Scheduler.cpp  Scheduler.hpp  StringPool.cpp  StringPool.hpp  analyze.cpp  analyze.hpp  assure.hpp  fn.hpp  macro.hpp  main.cpp  range.hpp
test/: CMakeLists.txt  IndexTest.cpp
